Updated Views - CSS

--- a/ClubDeCarte/Views/Account/ResetPassword.cshtml
+++ b/ClubDeCarte/Views/Account/ResetPassword.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Reset password";
 }
-
+<link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
