--- a/ClubDeCarte/Views/Account/Login.cshtml
+++ b/ClubDeCarte/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Log in";
 }
-
+<link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
