--- a/ClubDeCarte/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ClubDeCarte/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
 }
-
+<link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
