--- a/ClubDeCarte/Views/Authors/Index.cshtml
+++ b/ClubDeCarte/Views/Authors/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<link href="@Url.Content("~/Content/Author.css")" rel="stylesheet" type="text/css" />
 <h2>Index</h2>
 
 <p>
@@ -29,9 +29,19 @@
             @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AuthorID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AuthorID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AuthorID })
+            @{
+                if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.AuthorID })
+                }
+            }
+            @Html.ActionLink("Details", "Details", new { id = item.AuthorID })
+            @{
+                if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.AuthorID })
+                }
+            }
         </td>
     </tr>
 }
