--- a/ClubDeCarte/Views/BookOfTheWeeks/Delete.cshtml
+++ b/ClubDeCarte/Views/BookOfTheWeeks/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+<link href="@Url.Content("~/Content/CreateEditDelete.css")" rel="stylesheet" type="text/css" />
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
