--- a/ClubDeCarte/Views/BookReviews/Create.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<link href="@Url.Content("~/Content/CreateEditDelete.css")" rel="stylesheet" type="text/css" />
 <h2>Create</h2>
 
 
