--- a/ClubDeCarte/Views/BookReviews/Index.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Index</h2>
-
+<link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -53,9 +53,15 @@
             @Html.DisplayFor(modelItem => item.Tags)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BookReviewID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.BookReviewID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.BookReviewID })
+
+            @Html.ActionLink("Details", "Details", new { id = item.BookReviewID })
+            @{
+                if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.BookReviewID })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.BookReviewID })
+                }
+            }
         </td>
     </tr>
 }
