--- a/ClubDeCarte/Views/Books/Details.cshtml
+++ b/ClubDeCarte/Views/Books/Details.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Details";
 }
-
+<link href="@Url.Content("~/Content/CreateEditDelete.css")" rel="stylesheet" type="text/css" />
 <h2>Details</h2>
 
 <div>
