--- a/ClubDeCarte/Views/Books/Edit.cshtml
+++ b/ClubDeCarte/Views/Books/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<link href="@Url.Content("~/Content/CreateEditDelete.css")" rel="stylesheet" type="text/css" />
 <h2>Edit</h2>
 
 
