--- a/ClubDeCarte/Views/Events/Index.cshtml
+++ b/ClubDeCarte/Views/Events/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<link href="@Url.Content("~/Content/Events.css")" rel="stylesheet" type="text/css" />
 <h2>Index</h2>
 
 <p>
@@ -41,9 +41,14 @@
             @Html.DisplayFor(modelItem => item.AddedBy)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.EventID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.EventID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.EventID })
+            @Html.ActionLink("Details", "Details", new { id = item.EventID })
+            @{
+                if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Edit", "Edit", new { id = item.EventID })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.EventID })
+                }
+            }
         </td>
     </tr>
 }
