--- a/ClubDeCarte/Views/BookReviews/Details.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Details.cshtml
@@ -27,6 +27,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.AuthorBookReviewed)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AuthorBookReviewed)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
 
