--- a/ClubDeCarte/Content/Books.css
+++ b/ClubDeCarte/Content/Books.css
@@ -1,3 +1,1 @@
-﻿body {
-    background-image: url('https://www.incimages.com/uploaded_files/image/1920x1080/getty_508400521_2000133320009280263_305526.jpg');
-}
+﻿
