--- a/ClubDeCarte/Views/BookReviews/Index.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Index.cshtml
@@ -12,10 +12,10 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@using (Html.BeginForm("Index", "BookReview", FormMethod.Get))
+@using (Html.BeginForm())
 {
     <p>
-        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        Find your next read: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
         <input type="submit" value="Search" />
     </p>
 }
@@ -23,22 +23,22 @@
 <table class="table">
     <tr>
         <th>
-           ReviewPhoto
+            Photo
         </th>
         <th>
-            TitleReview
+            @Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortParm })
         </th>
         <th>
-            AuthorBookReviewed
+            Author 
         </th>
         <th>
             Description
         </th>
         <th>
-            AddedBy
+            Added By
         </th>
         <th>
-            AddedOn
+            @Html.ActionLink("Added on", "Index", new { sortOrder = ViewBag.DateSortParm })
         </th>
         <th>
             Tags
