--- a/ClubDeCarte/Views/Home/Index.cshtml
+++ b/ClubDeCarte/Views/Home/Index.cshtml
@@ -3,22 +3,22 @@
 }
 <link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <div class="jumbotron">
-    <h1>Welcome to Club de Carte!</h1>
+    <h1>Bine ai venit la Club de Carte!</h1>
 
     <p><a href="https://localhost:44314/Home/About" class="btn-primary">Read more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-6">
-        <h2>The book of the week</h2>
+        <h2>Cartea săptămânii </h2>
         <p>
-            Every week we offer you a new reading, not necessarily novelties, but also volumes published a few years ago, and sometimes even antique books.
+            În fiecare săptămână vă oferim o nouă lectură, nu neapărat noutăți, ci și volume publicate acum câțiva ani și, uneori, chiar și cărți antice.
         </p>
         <p><a class="btn-default" href="https://localhost:44314/BookOfTheWeeks">See the book of the week &raquo;</a></p>
     </div>
     <div class="col-md-6">
-        <h2>Events</h2>
-        <p>We present book events from different cities in Romania or online, as well as you can add future events in your city.</p>
+        <h2>Evenimente</h2>
+        <p>Vă prezentăm evenimente de carte din diferite orașe din România sau online, precum și voi puteți adăuga evenimente viitoare din orașul vostru. </p>
         <p><a class="btn-default" href="https://localhost:44314/Events">See the events &raquo;</a></p>
     </div>
 
