--- a/ClubDeCarte/Content/Events.css
+++ b/ClubDeCarte/Content/Events.css
@@ -3,4 +3,5 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: bottom;
+    background-color: peachpuff;
 }
