--- a/ClubDeCarte/Views/Shared/_Layout.cshtml
+++ b/ClubDeCarte/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Books", "Index", "Books")</li>
-                    <li>@Html.ActionLink("Book of the week", "Index", "BookOfTheWeeks")</li>
+                    <li>@Html.ActionLink("Books", "Index", "BookAuthorViewModels")</li>
+                    <li>@Html.ActionLink("Book of the week", "Index", "BookInBookOfTheWeekViewModels")</li>
                     <li>@Html.ActionLink("Book Reviews", "Index", "BookReviews")</li>
                     <li>@Html.ActionLink("Authors", "Index", "Authors")</li>
                     <li>@Html.ActionLink("Events", "Index", "Events")</li>
