--- a/ClubDeCarte/Views/Authors/Index.cshtml
+++ b/ClubDeCarte/Views/Authors/Index.cshtml
@@ -6,10 +6,15 @@
 }
 <link href="@Url.Content("~/Content/Author.css")" rel="stylesheet" type="text/css" />
 
-<h2>Index</h2>
+<h1>Autori</h1>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @{
+        if (User.IsInRole("Admin"))
+        {
+            @Html.ActionLink("Create New", "Create")
+        }
+    }
 </p>
 
 <p>
