--- a/ClubDeCarte/Content/Author.css
+++ b/ClubDeCarte/Content/Author.css
@@ -1,4 +1,7 @@
-﻿
-body {
-    background-color: peachpuff;
+﻿body {
+    background-image: url("https://www.incimages.com/uploaded_files/image/1920x1080/getty_496612468_2000138820009280460_336567.jpg");
+}
+
+.table tr.active td {
+    background-color: #fff2cc;
 }
