--- a/ClubDeCarte/Content/Books.css
+++ b/ClubDeCarte/Content/Books.css
@@ -1,3 +1,3 @@
 ﻿body {
-    background-color: peachpuff;
+    background-image: url("https://www.incimages.com/uploaded_files/image/1920x1080/getty_496612468_2000138820009280460_336567.jpg");
 }
