--- a/ClubDeCarte/Views/Authors/Index.cshtml
+++ b/ClubDeCarte/Views/Authors/Index.cshtml
@@ -22,8 +22,11 @@
     <input type="submit" value="Search" />
 </p>
 
-<table class="table">
+<table class="table table-hover">
     <tr>
+        <th>
+            
+        </th>
         <th>
             First Name
         </th>
@@ -35,29 +38,37 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @{
-                    if (User.IsInRole("Admin"))
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.AuthorID })
-                    }
-                }
-                @Html.ActionLink("Details", "Details", new { id = item.AuthorID })
-                @{
-                    if (User.IsInRole("Admin"))
-                    {
-                        @Html.ActionLink("Delete", "Delete", new { id = item.AuthorID })
-                    }
-                }
-            </td>
-        </tr>
+<tr>
+    <td>
+        @{
+            if (User.IsInRole("Admin"))
+            {
+                @Html.DisplayFor(modelItem => item.AuthorID)
+            }
+        }
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @{
+            if (User.IsInRole("Admin"))
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = item.AuthorID })
+            }
+        }
+        @Html.ActionLink("Details", "Details", new { id = item.AuthorID })
+        @{
+            if (User.IsInRole("Admin"))
+            {
+                @Html.ActionLink("Delete", "Delete", new { id = item.AuthorID })
+            }
+        }
+    </td>
+</tr>
     }
 
 </table>
