--- a/ClubDeCarte/Views/BookOfTheWeeks/Index.cshtml
+++ b/ClubDeCarte/Views/BookOfTheWeeks/Index.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.BookID)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.ValidFrom)
         </th>
         <th>
@@ -27,6 +30,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.BookID)
+        </td>
+         <td>
+            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ValidFrom)
