--- a/ClubDeCarte/Views/BookReviews/Index.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Index.cshtml
@@ -20,7 +20,7 @@
     </p>
 }
 
-<table class="table">
+<table class="table table-hover">
     <tr>
         <th>
             
@@ -38,7 +38,7 @@
             Added By
         </th>
         <th>
-            @Html.ActionLink("Added on", "Index", new { sortOrder = ViewBag.DateSortParm })
+            @Html.ActionLink("Added on", "Index", new { sortOrder = ViewBag.DateSortParam })
         </th>
         <th>
             Tags
