--- a/ClubDeCarte/Views/Books/Index.cshtml
+++ b/ClubDeCarte/Views/Books/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "Index";
 }
-<link href="@Url.Content("~/Content/Books.css")" rel="stylesheet" type="text/css" />
+
 <h2>Index</h2>
 
 <p>
@@ -21,19 +21,15 @@
 }
 
 
-<table class="table">
+<table class="table table-hover">
     <tr>
-       <th>
-
-        </th>
+        <th> </th>
         <th>
             @Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortParm })
         </th>
-
         <th>
             Author
         </th>
-
         <th>
             @Html.ActionLink("Other Autors", "Index", new { sortOrder = ViewBag.OtherAuthorSortParm })
         </th>
@@ -46,46 +42,46 @@
         <th>
             Pages
         </th>
-        
+
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-<tr>
-    <td>
-        <img src="@Url.Content(item.UrlPhotoCover)" width="150" height="200" multiple />
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Title)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AuthorID)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.OtherAuthors)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.PublishingHouse)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.ISBN)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Pages)
-    </td>
+        <tr>
+            <td>
+                <img src="@Url.Content(item.UrlPhotoCover)" width="150" height="200" multiple />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AuthorID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OtherAuthors)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PublishingHouse)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Pages)
+            </td>
 
-    <td>
-        @Html.ActionLink("Details", "Details", new { id = item.BookID })
-        @{
-            if (User.IsInRole("Admin"))
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = item.BookID })
-                @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
-            }
-        }
-    </td>
-</tr>
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.BookID })
+                @{
+                    if (User.IsInRole("Admin"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.BookID })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
+                    }
+                }
+            </td>
+        </tr>
     }
 
 </table>
