--- a/ClubDeCarte/Views/Events/Index.cshtml
+++ b/ClubDeCarte/Views/Events/Index.cshtml
@@ -20,7 +20,7 @@
         <input type="submit" value="Search" />
     </p>
 }
-<table class="table">
+<table class="table table-hover">
     <tr>
         <th>
             @Html.ActionLink("Event description", "Index", new { sortOrder = ViewBag.EventSortParm })
