--- a/ClubDeCarte/Views/Authors/Index.cshtml
+++ b/ClubDeCarte/Views/Authors/Index.cshtml
@@ -17,60 +17,63 @@
     }
 </p>
 
-<p>
-    Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
-    <input type="submit" value="Search" />
-</p>
+@using (Html.BeginForm())
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" value="Search" />
+    </p>
+}
 
-<table class="table table-hover">
-    <tr>
-        <th>
-            
-        </th>
-        <th>
-            First Name
-        </th>
-        <th>
-            @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
-        </th>
-        <th></th>
-    </tr>
+    <table class="table table-hover">
+        <tr>
+            <th>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-         <td>
-        @{
-            if (User.IsInRole("Admin"))
-            {
-                @Html.DisplayFor(modelItem => item.AuthorID)
-            }
+            </th>
+            <th>
+                First Name
+            </th>
+            <th>
+                @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @{
+                        if (User.IsInRole("Admin"))
+                        {
+                            @Html.DisplayFor(modelItem => item.AuthorID)
+                        }
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @{
+                        if (User.IsInRole("Admin"))
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { id = item.AuthorID })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.AuthorID })
+                        }
+                    }
+                    @Html.ActionLink("Details", "Details", new { id = item.AuthorID })
+
+                </td>
+            </tr>
         }
-         </td>
-          <td>
-        @Html.DisplayFor(modelItem => item.FirstName)
-          </td>
-         <td>
-        @Html.DisplayFor(modelItem => item.LastName)
-         </td>
-         <td>
-        @{
-            if (User.IsInRole("Admin"))
-            {
-                @Html.ActionLink("Edit", "Edit", new { id = item.AuthorID })
-                @Html.ActionLink("Delete", "Delete", new { id = item.AuthorID })
-            }
-        }
-        @Html.ActionLink("Details", "Details", new { id = item.AuthorID })
-      
-           </td>
-    </tr>
-     }
 
-</table>
+    </table>
 
-<br />
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+    <br />
+    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-@Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+    @Html.PagedListPager(Model, page => Url.Action("Index",
+        new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
