--- a/ClubDeCarte/Views/BookOfTheWeeks/Create.cshtml
+++ b/ClubDeCarte/Views/BookOfTheWeeks/Create.cshtml
@@ -16,10 +16,9 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.BookID, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.BookID, "Book Title", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.BookID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.BookID, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(model => model.BookID, ViewBag.BookNameFromID as IEnumerable<SelectListItem>, "Select Book", htmlAttributes: new { @class = "control-label col-md-2" })
         </div>
     </div>
 
