--- a/ClubDeCarte/Views/Books/Create.cshtml
+++ b/ClubDeCarte/Views/Books/Create.cshtml
@@ -23,12 +23,11 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.AuthorID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AuthorID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AuthorID, "", new { @class = "text-danger" })
-            </div>
+         <div class="form-group">
+            @Html.LabelFor(model => model.AuthorID, "Author Name", htmlAttributes: new { @class = "control-label col-md-2" })
+             <div class="col-md-10">
+                 @Html.DropDownListFor(model => model.AuthorID, ViewBag.AuthorNameFromID as IEnumerable<SelectListItem>, "Select Author", htmlAttributes: new { @class = "control-label col-md-2" })
+             </div>
         </div>
 
         <div class="form-group">
