Added logo image

--- a/ClubDeCarte/Views/Home/Index.cshtml
+++ b/ClubDeCarte/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Bine ai venit la Club de Carte!</h1>
 
-    <p><a href="~/About" class="btn-primary">Read more &raquo;</a></p>
+    <p><a class="btn-primary" href="~/BookAuthorViewModels">Read more  &#x1F4D6;</a></p>
 </div>
 
 <div class="row">
@@ -14,12 +14,12 @@
         <p>
             În fiecare săptămână vă oferim o nouă lectură, nu neapărat noutăți, ci și volume publicate acum câțiva ani și, uneori, chiar și cărți antice.
         </p>
-        <p><a class="btn-default" href="~/BookInBookOfTheWeekViewModels">See the book of the week &raquo;</a></p>
+        <p><a class="btn-default" href="~/BookInBookOfTheWeekViewModels">See the book of the week  &#x1F4D6;</a></p>
     </div>
     <div class="col-md-6">
         <h2>Evenimente</h2>
         <p>Vă prezentăm evenimente de carte din diferite orașe din România sau online, precum și voi puteți adăuga evenimente viitoare din orașul vostru. </p>
-        <p><a class="btn-default" href="~/Events">See the events &raquo;</a></p>
+        <p><a class="btn-default" href="~/Events">See the events  &#x1F4D6;</a></p>
     </div>
 
 </div>
