--- a/ClubDeCarte/Views/Shared/_Layout.cshtml
+++ b/ClubDeCarte/Views/Shared/_Layout.cshtml
@@ -12,14 +12,17 @@
     <div class="sb-topnav navbar navbar-expand">
         <div class="container">
             <div class="navbar-header">
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")">
+                    <img src="https://bloximages.chicago2.vip.townnews.com/kenoshanews.com/content/tncms/assets/v3/editorial/d/ac/dac31880-0800-537c-9ba0-a372f4ce0402/5e792e606baac.image.jpg?resize=1200%2C832" alt="Logo" style="height:80px; width: 120px;" />
+                </a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Club de Carte", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse", style="font-size: large">
                 <ul class="nav navbar-nav">
                   
                     @{
