--- a/ClubDeCarte/Views/BookReviews/Index.cshtml
+++ b/ClubDeCarte/Views/BookReviews/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Index</h2>
 <link href="@Url.Content("~/Content/HomePage.css")" rel="stylesheet" type="text/css" />
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create Your Review", "Create", "BookReviews", null, new { @class = "btn btn-primary" })
 </p>
 
 @using (Html.BeginForm())
